syntax = "proto3";

option go_package="./pb";

message AppendEntriesRequest{
  // leader’s term
  uint64 term = 1;
  // so follower can redirect clients
  string leaderId = 2;
  // index of log entry immediately preceding new ones
  uint64 prevLogIndex = 3;
  // term of prevLogIndex entry
  uint64 prevLogTerm = 4;
  // log entries to store (empty for heartbeat, may send more than one for efficiency)
  repeated string entries = 5;
  // leader’s commitIndex
  uint64 leaderCommit = 6;
}
