syntax = "proto3";

option go_package="./pb";

message AppendEntriesResponse{
  // currentTerm, for leader to update itself
  uint64 term = 1;
  // true if follower contained entry matching prevLogIndex and prevLogTerm
  bool success = 2;
}
