syntax = "proto3";

import "append_entries_request.proto";
import "append_entries_response.proto";
import "request_vote_request.proto";
import "request_vote_response.proto";

package pb;

option go_package="./pb";

service Raft {
  // Invoked by leader to replicate log entries; also used as heartbeat
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
  // Invoked by candidates to gather votes
  rpc RequestVotes (RequestVoteRequest) returns (RequestVoteResponse) {}
}
