syntax = "proto3";

package pb;

option go_package="./pb";

message RequestVoteResponse{
  // currentTerm, for candidate to update itself
  uint64 term = 1;
  // true means candidate received vote
  bool voteGranted = 2;
}
